welcome.lessons.welcome.bat.bool1.LastDigit.scala.code
def lastDigit(a:Int, b:Int):Boolean = {
var f:Boolean=false 
var x=a	
var y=b
while(a%!=a && b%!=b){
   x=x%
   y=y%
}
if(a==b){
	f=true
}else{f=false}
return f
}
